[package]
name = "actix-jwt-validator-middleware"
version = "0.1.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display_json = { git = "https://github.com/jofas/display_json" }
jonases-tracing-util = { git = "https://github.com/jofas/jonases_tracing_util" }
actix-web = "^3.3.2"
actix-web-httpauth = "^0.5.0"
futures = "^0.3.13"
jwks-client = "^0.2.0"
serde = { version = "^1.0.117", features = ["derive"] }
