[package]
name = "actix-jwt-validator-middleware"
version = "0.2.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Middleware and extractor for JWT bearer tokens for the actix-web framework"
homepage = "https://github.com/jofas/actix_jwt_validator_middleware"
repository = "https://github.com/jofas/actix_jwt_validator_middleware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display_json = "^0.1.0"
jonases-tracing-util = "^0.1.0"
actix-web = "^3.3.2"
actix-web-httpauth = "^0.5.0"
futures = "^0.3.13"
jwks-client = "^0.2.0"
serde = { version = "^1.0.125", features = ["derive"] }
